--- a/splash-page/assets/css/styles.css
+++ b/splash-page/assets/css/styles.css
@@ -1,186 +1,131 @@
-/*-------------------------------
-General styles
---------------------------------*/
-
-/** {
-	outline: 1px solid red;
-}*/
-
-body {
-	margin: 30px;
-	font-family: Verdana, Geneva, sans-serif;
-	background-color: #f2f2f2;
+* {
+    margin: 0 auto;
+    font-family: Verdana, Geneva, sans-serif;
 }
 
-.container {
-	background-color: #fff;
-	max-width: 500px;
-	height: auto;
-	margin: 0 auto;
+#container {
+    background-color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* width: 100%; */
+    height: 100%;
+    text-align: center;
 }
 
-/*-------------------------------
-Header
---------------------------------*/
-
-#login-container {
-	background-color: #fff;
-}
-
-#login-container #main-text {
-	/*display: table-cell;
-	vertical-align: middle;*/
-}
-
-#header {
-	background-image: url(../images/bg.jpg);
-	background-size: 100% auto;
-	background-position: center;
-	/*background-color: #14172f;*/
-	height: 150px;
-}
-
-#login-container #logo {
-	max-width: 100px;
+#logo {
+    max-width: 20%;
+    padding-top: 20px;
     display: block;
-    height: auto;
     text-align: center;
-    margin: 0 auto; 
-    margin-top: -52px;
+    margin-bottom: 30px;
 }
 
-#business-name {
-	text-align: center;
-	color: #fff;
-	padding-top: 30px;
+#footer {
+    margin-top: 16px;
 }
 
-.captive-portal #main-text {
-	padding: 20px;
-	color: #2d3436;
-	font-size: 1.5em;
+.form-container {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-top: 16px;
+    background-image: url('/guest/s/default/splash-page/assets/images/background.png');
+}
+
+#container h1 {
+    text-align: center;
+    color: #0836a9;
+}
+
+.information {
+    padding: 5px;
+    color: #3399ff;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+p {
     text-align: justify;
-    line-height: 34px;
-    text-align: center;
-}
-
-#btn-container-down {
-	bottom: 0;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 10px;
-	left: 0;
-	right: 0;
-}
-
-
-/*-------------------------------
-Form
---------------------------------*/
-
-#login-form {
-	margin: 0 auto;
-	text-align: center;
-	padding: 30px;
-	margin-bottom: 39px;
-}
-
-#login-form label {
-	display: block;
-	color: #b2bec3;
-	text-align: left;
-	margin-bottom: 10px;
 }
 
 .form-control {
-	width: 100%;
-	height: 30px;
-	border: 1px solid #b2bec3;
-	border-radius: 2px;
-	padding: 22px;
-	box-sizing: border-box;
-
+    width: 90%;
+    height: 35px;
+    display: block;
+    margin-bottom: 10px;
+    background: white;
 }
 
-.form-control:focus {
-	outline: none;
+.btn-blue {
+    background-color: #4567b5;
+    border: 0;
+    color: #fff;
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    height: 35px;
+    font-size: 15px;
 }
 
-.btn-send {
-	display: block;
-	width: 100%;
-	background-color: #00bdd7;
-	font-size: 14px;
-	border: 0px;
-	padding: 10px;
-	box-sizing: border-box;
-	color: #323232;
+#terms {
+    width: 90%;
+    color: #fff;
+    font-weight: 100;
+    margin-top: 10px;
+    margin-bottom: 16px;
 }
 
-.error-message {
-	background-color: #eb4d4b;
-	padding: 10px;
-	color: #fff;
-	font-weight: 100;
-	font-size: 12px;
-	border-radius: 2px;
+/* For desktop: */
+.col-1 {
+    width: 8.33%;
 }
 
-#accept-checkbox {
-	margin-botom:10px;
-	font-size: 12px;
-	color: #323232;
+.col-2 {
+    width: 16.66%;
 }
 
-#accept-checkbox label {
-	display: inline-block !important;
-	color: #323232;
+.col-3 {
+    width: 25%;
 }
 
-
-/*-------------------------------
-TOS
---------------------------------*/
-
-.btn-down-footer {
-	display: block;
-	margin: 0 auto;
-	margin-top: -29px;
+.col-4 {
+    width: 33.33%;
 }
 
-#tos {
-	padding: 20px;
-	color: #2d3436;
-	line-height: 27px;
-	font-size: 14px;
-	text-align: justify;
+.col-5 {
+    width: 41.66%;
 }
 
-#tos h2 {
-	text-align: center;
+.col-6 {
+    width: 50%;
 }
 
-
-/*-------------------------------
-Succesful Page
---------------------------------*/
-
-.succesful-container {
-	height: auto !important;
-	padding-bottom: 20px;
+.col-7 {
+    width: 58.33%;
 }
 
-.succesful-container #main-text {
-	text-align: center;
-	display: block;
+.col-8 {
+    width: 66.66%;
 }
 
-.succesful-container .btn-send {
-	color: #fff;
-	text-align: center;
-	width: 60%;
-	margin: 0 auto;
-	display: block;
-	text-decoration: none;
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
 }
